tests/import_export_equals/import_export_equals.exp
Error --------------------------------------------------------------------------------- import_equals_declaration.js:5:1

Cannot cast `Foo.x` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   import_equals_declaration.js:5:1
   5| Foo.x as empty; // ERROR
      ^^^^^

References:
   export_assignment.js:1:14
   1| export = {x: 42, y: "hello"};
                   ^^ [1]
   import_equals_declaration.js:5:10
   5| Foo.x as empty; // ERROR
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------- import_equals_qualified.js:2:1

`import ... = <QualifiedName>` syntax is not enabled. [unsupported-syntax]

   2| export import Bar = Foo.x; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- import_equals_qualified.js:3:18

Cannot resolve name `Bar`. [cannot-resolve-name]

   3| declare const y: Bar; // ERROR: `Bar` cannot be resolved because the qualified name import above is unsupported
                       ^^^



Found 3 errors
